fix alignment of login form  in mobile device

--- a/style.css
+++ b/style.css
@@ -116,9 +116,9 @@ ul li:hover {
 /* login form refactor */
 
 #login-container, #signup-container {
-  /* padding: 24px; */
+  padding: 24px;
   /* height: 100vh; */
-    width: 420px;
+    /* width: 420px; */
     margin: 30px auto;
 }
 
